# create-cpp-project

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp  strings.cpp  strings.h  templates.cpp  templates.h  terminal.cpp  terminal.h
templates/sdl3/: CMakeLists.txt  cpp-template.json
templates/sdl3/src/: CMakeLists.txt  main.cpp
templates/simple/: CMakeLists.txt  cpp-template.json
templates/simple/src/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  project_name.cpp  project_name.h
templates/simple/tests/: CMakeLists.txt  test_add.cpp  test_sub.cpp
